--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "clean": "gatsby clean"
   },
   "dependencies": {
+    "bootstrap": "^5.1.3",
     "dotenv": "10.0.0",
     "gatsby": "3.13.1",
     "gatsby-image": "^3.11.0",
@@ -35,6 +36,7 @@
     "gatsby-transformer-remote-filesystem": "^1.0.0",
     "gatsby-transformer-sharp": "^3.13.0",
     "react": "17.0.2",
+    "react-bootstrap": "^2.1.2",
     "react-dom": "17.0.2",
     "react-helmet": "6.1.0",
     "react-slick": "0.28.1",
